--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>The World’s Biggest Problem — And What We Can Do</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
-    name="description"
+    name="World Biggest Problem"
     content="A simple explanation of the world’s biggest problem — and the practical steps we can take together to solve it."
   />
   <style>
