--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
       margin-top: 30px;
     }
 
+    .reveal-clarify {
+      font-size: 0.85rem;
+      font-style: italic;
+      color: var(--text-dim);
+      opacity: 0.7;
+      margin-top: 12px;
+    }
+
     /* ============================================
        SCREEN 3: THE TRAP (Why it's hard)
        ============================================ */
@@ -748,6 +756,9 @@
       <p class="reveal-note">
         Every major crisis is the same problem wearing different masks:<br />
         We can't cooperate as fast as we can create.
+      </p>
+      <p class="reveal-clarify">
+        (In simple words: We build faster than we can agree.)
       </p>
     </div>
   </section>
